# trpo-tofi-delivery

./: .gitignore  .pre-commit-config.yaml  Dockerfile_db  Dockerfile_test  Makefile  docker-compose.yml  pyproject.toml
config/config/: settings.py  urls.py
config/delivery/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  validators.py  views.py
config/delivery/migrations/: 0001_initial.py  0002_alter_user_full_name_transactionhistory_orderhistory_and_more.py  0003_alter_courieradditionaldata_current_order_and_more.py  0004_orderhistory_courier.py
config/templates/: base.html  canceled.html  done.html  process.html
frontend/: courier.html  customer.html  index.html  login.html  signup.html
frontend/css/: style.css
frontend/js/: courier.js  customer.js  guest.js  login.js  signup.js
